--- a/domain-schema/pom.xml
+++ b/domain-schema/pom.xml
@@ -46,6 +46,18 @@
             </execution>
             
             <execution>
+               <id>drivers</id>
+               <phase>generate-sources</phase>
+               <goals>
+                  <goal>idl-protocol</goal>
+               </goals>
+               <configuration>
+                  <sourceDirectory>${project.basedir}/src/main/resources/avro/com/gottaeat/domain/driver</sourceDirectory>
+                  <outputDirectory>target/generated-sources/proto</outputDirectory>
+               </configuration>
+            </execution>
+            
+            <execution>
                <id>users</id>
                <phase>generate-sources</phase>
                <goals>
