Upgraded Ignite version

--- a/delivery-time-estimator/pom.xml
+++ b/delivery-time-estimator/pom.xml
@@ -50,6 +50,12 @@
   		<version>${ignite.version}</version>
 	</dependency>
 	
+	<dependency>
+    	<groupId>jakarta.xml.bind</groupId>
+    	<artifactId>jakarta.xml.bind-api</artifactId>
+    	<version>2.3.2</version>
+	</dependency>
+	
 	
   </dependencies>
 	
