--- a/paypal-authorization-service/pom.xml
+++ b/paypal-authorization-service/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
   			<artifactId>jsr311-api</artifactId>
-  			<version>1.1.1</version>
+  			<version>${jsr311-api.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -60,6 +60,12 @@
     		<groupId>com.squareup.okhttp3</groupId>
     		<artifactId>okhttp</artifactId>
     		<version>${okhttp.version}</version>
+		</dependency>
+		
+		<dependency>
+  			<groupId>org.netbeans.external</groupId>
+  			<artifactId>com-google-gson</artifactId>
+  			<version>${com-google-gson.version}</version>
 		</dependency>
 		
 	</dependencies>
