--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,15 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <nifi-nar-maven-plugin.version>1.2.0</nifi-nar-maven-plugin.version>
         
+        <com-google-gson.version>RELEASE113</com-google-gson.version>
         <httpclient.version>4.5.10</httpclient.version>
         <ignite.version>2.9.0</ignite.version>
+        <jsr311-api.version>1.1.1</jsr311-api.version>
         <junit.version>4.13.1</junit.version>
         <lombok.version>1.18.20</lombok.version>
         <mysql.version>8.0.22</mysql.version>
         <okhttp.version>4.5.0</okhttp.version>
-        <pulsar.version>2.7.0</pulsar.version>
+        <pulsar.version>2.8.1</pulsar.version>
         <resilience4j.version>1.5.0</resilience4j.version>
     </properties>
 
