--- a/docker-image/src/main/docker/microservices/service-configs/geo-encoding-aggregator-service-config.yml
+++ b/docker-image/src/main/docker/microservices/service-configs/geo-encoding-aggregator-service-config.yml
@@ -4,7 +4,9 @@ namespace: services
 name: geo-encoding-aggregator-service
 inputs:
   - persistent://geography/inbound/encoded-aggregate
-output: persistent://orders/inbound/encoded
+output: persistent://geography/inbound/encoded
+schemaType: AVRO
+
 # userConfig:
 
 
