--- a/docker-image/src/main/docker/microservices/service-configs/payment-service-config.yml
+++ b/docker-image/src/main/docker/microservices/service-configs/payment-service-config.yml
@@ -1,10 +1,22 @@
+##################################
+# Basic Configuration
+##################################
 className:  com.gottaeat.services.payment.PaymentService
 tenant: gottaeat
 namespace: services
 name: payment-service
+
+##################################
+# Input / Output
+##################################
 inputs:
   - persistent://payments/inbound/pending
 output: persistent://orders/inbound/valid-food-orders
+logTopic: persistent://gottaeat/services/payment-service-log
+
+##################################
+# User configuration
+##################################
 userConfig:
   "apple-pay-topic": "persistent://payments/inbound//applePay"
   "credit-card-topic": "persistent://payments/inbound/creditCard"
@@ -16,7 +28,6 @@ userConfig:
 # Processing
 ##################################
 autoAck: true
-logTopic: persistent://gottaeat/services/payment-service-log
 processingGuarantees: EFFECTIVELY_ONCE
 retainOrdering: false
 subName: payment-service-sub
@@ -25,9 +36,9 @@ cleanupSubscription: true
 ##################################
 # Function instance resources
 ##################################
-CPU: 2.0
-disk: 50000
-ram: 200000000
+# CPU: 2.0
+# disk: 50000
+# ram: 200000000
 # parallelism: 3
 
 ##################################
