--- a/order-solicititation-service/src/main/resources/order-solicititation-aggregator-service-config.yml
+++ b/order-solicititation-service/src/main/resources/order-solicititation-aggregator-service-config.yml
@@ -5,6 +5,7 @@ name: order-solicititation-aggregator-service
 inputs:
 - persistent://restaurants/solicited/accepted
 output: persistent://restaurants/inbound/assigned
+schemaType: AVRO
 userConfig: 
 
 
