--- a/docker-image/src/main/docker/microservices/service-configs/order-validation-service-config.yml
+++ b/docker-image/src/main/docker/microservices/service-configs/order-validation-service-config.yml
@@ -4,7 +4,7 @@ namespace: services
 name: order-validation-service
 inputs:
   - persistent://orders/inbound/food-orders
-output: persistent://orders/inbound/valid-food-orders
+output:  
 logTopic: persistent://gottaeat/services/order-validation-service-log
 userConfig:
   "geo-topic": "persistent://geography/inbound/non-encoded"
